# LolliPop

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  conda_lollipop_env.yaml  config.yaml  config_RECOMB.yaml  confints.py  deconvolute.py  filters_preprint.yaml  lollipop.py  main.py  preprocessors.py  pyproject.toml  version-from-git.sh
.github/: dependabot.yml
.github/workflows/: main.yaml  test.yaml
RECOMBpaper/: GetClinicalData.ipynb  README.md  conda_ipylollipop_env.yaml
RECOMBpaper/data/: mutlist-full.txt  tallymut_line.tsv  tallymut_line_full.tsv
lollipop/: __init__.py  confints.py  kerneldeconv.py  preprocessors.py  version.py
lollipop/cli/: __init__.py  deconvolute.py  generate_mutlist.py  getmutations_from_basecount.py  lollipop.py
preprint/: README.md
preprint/data/: tallymut_line_full.tsv  tallymut_line_full.tsv.zst
presets/: deconv_bootstrap.yaml  deconv_linear.yaml  deconv_linear_logit.yaml  deconv_linear_logit_quasi.yaml  deconv_linear_logit_quasi_strat.yaml  deconv_linear_quasi_strat.yaml  deconv_linear_wald.yaml  deconv_linear_wald_quasibinom.yaml  deconv_mcgill.yaml
tests/: test_filters.py  test_integration.py  test_var_dates.yaml
tests/test_auto_no_loc/: config.yaml  tallymut.tsv
