[tool.poetry]
name = "lollipop"
version = "0.0.0"
description = "tool for Deconvolution for Wastewater Genomics"
authors = ["David Dreifuss <dadreifuss@gmail.com>", "Ivan Blagoev Topolsky <ivan.topolsky@bsse.ethz.ch>", "Matteo Carrara <carrara@nexus.ethz.ch>"]
maintainers = ["Ivan Blagoev Topolsky <ivan.topolsky@bsse.ethz.ch>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/cbg-ethz/LolliPop"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.23"
scipy = ">=1.9"
pandas = ">=1.5"
zstandard = { version = ">=0.20", optional = true }
"ruamel.yaml" = { version = ">=0.15.80", optional = true }
strictyaml = { version = ">=1.7", optional = true }
tqdm = { version = ">=4.64", optional = true }
click = { version = "^8.0", optional = true }
click-option-group = { version = "^0.5", optional = true }

[tool.poetry.extras]
cli = [ "zstandard", "ruamel.yaml", "strictyaml", "tqdm", "click", "click-option-group" ]

[tool.poetry.scripts]
lollipop = { callable = "lollipop.cli:cli", extras = ["cli"] }
deconvolute =  { callable = "lollipop.deconvolute:deconvolute", extras = ["cli"] }

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
